# QtCalc

./: .gitignore  CMakeLists.txt  README.md  app_settings.h  calculator.cpp  calculator.h  main.cpp  settings_dialog.cpp  settings_dialog.h
